fix sidebar z-index value

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14851,7 +14851,7 @@ be a descendant of the grid when it is being dragged.
     padding-top: 51px;
     width: 230px;
     overflow: auto;
-    z-index: 10;
+    z-index: 20;
     background-color: #222d32;
     -webkit-box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
